--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zenalyze",
+  "name": "clareai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,7 +29,11 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.51.0",
     "@tabler/icons-react": "^3.34.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
