--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
+    "groq-sdk": "^0.29.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-pwa": "^5.6.0",
